Actually fix layout bug by setting missing box-sizing to border-box

--- a/themes/personal-blue/assets/scss/modules/_layout.scss
+++ b/themes/personal-blue/assets/scss/modules/_layout.scss
@@ -1,5 +1,9 @@
 // Layout
 
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 // Base layout (mobile/no css grid support) ************************************
 .main-nav, .intro, .content, .newsletter, .footer {
   width: 100%;
@@ -15,11 +19,6 @@
 
 // Grid layout for supported browsers ******************************************
 @supports (display: grid) {
-  .main-nav, .intro, .content, .newsletter, .footer {
-    width: auto;
-    margin: 0;
-  }
-
   .main-nav { grid-area: nav; }
   .intro { grid-area: intro; }
   .content { grid-area: content; }
