--- a/themes/personal-blue/assets/scss/modules/_navigation.scss
+++ b/themes/personal-blue/assets/scss/modules/_navigation.scss
@@ -1,7 +1,6 @@
 // Main navigation
 
 .main-nav, .footer-nav {
-  margin: 0 auto;
   text-align: center;
 
   .nav__item { margin-right: 1rem; }
